fix: normalize letter-spacing of `button` elements

--- a/styles/generic/_g.reset.scss
+++ b/styles/generic/_g.reset.scss
@@ -59,3 +59,8 @@ option{
     cursor: text;
     outline: none;
   }
+
+// Remove letter-spacing normal in some browsers
+button {
+    letter-spacing: inherit;
+}
